Added new page and ability to modify image and description on runtime

--- a/mobileApp/app/src/main/res/layout/fragment_main.xml
+++ b/mobileApp/app/src/main/res/layout/fragment_main.xml
@@ -7,19 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.PlaceholderFragment">
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
-        tools:layout_constraintLeft_creator="1"
-        tools:layout_constraintTop_creator="1" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -33,33 +20,25 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/title"
                 android:layout_width="340dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="20dp"
-                android:text=" TD Visa Cash Back Infinite Card"
                 android:textColor="#3BAE28"
                 android:textSize="30sp"
                 app:fontFamily="@font/archivo_black" />
 
             <ImageView
-                android:id="@+id/imageView6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/cash_back_infinite_visa_card" />
+                android:id="@+id/recImage"
+                android:layout_width="318dp"
+                android:layout_height="200dp" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="236dp"
-                android:text="TextView" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="236dp"
-                android:text="TextView" />
+                android:text="" />
 
             <Button
                 android:id="@+id/button"
