--- a/mobileApp/app/src/main/res/layout/activity_main.xml
+++ b/mobileApp/app/src/main/res/layout/activity_main.xml
@@ -53,10 +53,10 @@
         android:id="@+id/loadingText"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="450dp"
         android:layout_marginLeft="130dp"
+        android:layout_marginTop="450dp"
         android:gravity="center"
-        android:text="Loading..."
+        android:text="@string/loading"
         android:textSize="24sp" />
 
 
