--- a/mobileApp/app/src/main/res/layout/login_main.xml
+++ b/mobileApp/app/src/main/res/layout/login_main.xml
@@ -55,7 +55,7 @@
         android:textColor="#FFFFFF" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/infobutton"
         android:layout_width="150dp"
         android:layout_height="20dp"
         android:layout_marginTop="20dp"
