--- a/mobileApp/app/src/main/res/layout/fragment_main.xml
+++ b/mobileApp/app/src/main/res/layout/fragment_main.xml
@@ -61,10 +61,10 @@
 
             <Button
                 android:id="@+id/button"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
-                android:background="#3BAE28"
+                android:background="@drawable/button_light_template"
                 android:text="@string/branch"
                 android:textColor="#FFFFFFFF"
                 android:textSize="18sp" />
