--- a/mobileApp/app/src/main/res/layout/login_main.xml
+++ b/mobileApp/app/src/main/res/layout/login_main.xml
@@ -48,20 +48,19 @@
         android:layout_width="200dp"
         android:layout_height="35dp"
         android:layout_marginTop="50dp"
-        android:layout_marginBottom="10dp"
-        android:background="#038403"
+        android:background="@drawable/button_light_template"
         android:onClick="login"
         android:text="Login"
         android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/infobutton"
-        android:layout_width="150dp"
-        android:layout_height="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="#0000ffff"
-        android:text="Forgot Password?"
-        android:textColor="#FFFFFF" />
+        android:text="@string/forgot"
+        android:textColor="#FFFFFF"
+        android:textSize="10sp" />
 
 
 </LinearLayout>
