--- a/mobileApp/app/src/main/res/layout/fragment_main.xml
+++ b/mobileApp/app/src/main/res/layout/fragment_main.xml
@@ -55,6 +55,7 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
                 android:text="@string/Apply"
                 android:textSize="25sp"
                 app:fontFamily="@font/archivo_black" />
