--- a/mobileApp/app/src/main/res/layout/map_main.xml
+++ b/mobileApp/app/src/main/res/layout/map_main.xml
@@ -9,6 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/map"
-        tools:context=".ui.main.MapsActivity"
+        tools:context=".MainActivity"
         android:name="com.google.android.gms.maps.SupportMapFragment" />
 </androidx.constraintlayout.widget.ConstraintLayout>
