--- a/mobileApp/app/src/main/res/layout/activity_main.xml
+++ b/mobileApp/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,7 @@
                 app:srcCompat="@drawable/td_canada_logo" />
 
             <ImageButton
-                android:id="@+id/imageButton2"
+                android:id="@+id/infoBtn"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="20dp"
@@ -53,7 +53,7 @@
                 android:text="@string/app_name"
                 android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageButton2"
+                app:layout_constraintEnd_toStartOf="@+id/infoBtn"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.google.android.material.appbar.AppBarLayout>
@@ -105,13 +105,5 @@
         app:maxImageSize="40dp"
         app:srcCompat="@android:drawable/ic_menu_mylocation"
         app:backgroundTint="#3BAE28"/>
-
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/map"
-        tools:context=".ui.main.MapsActivity"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
